<!--
 Copyright 2016, 2019 MyOralVillage
 All Rights Reserved

 These values are for Kenya (which has the code mcc639 for network providers
 -->
<resources>
    <string name="app_name">FinancialNumeracyGames</string>

    <string name="btn_lvl1_text">0&#8211;9</string>
    <string name="btn_lvl2_text">10&#8211;9999</string>
    <string name="btn_lvl3_text">10000&#8211;10000000</string>

    <string name="true_button">Prev</string>
    <string name="false_button">Next</string>
    <string name="finish_button">Next</string>

    <string name="btn_lvl1_QA_text">Q&amp;A</string>
    <string name="btn_lvl1_tracing_text">Tracing</string>
    <string name="btn_lvl1_dualCoding_text">Dual Coding</string>

    <string name="btn_lvl2_placeValue_text">Place Value (blocks)</string>
    <string name="btn_lvl2_ordering_text">Ordering</string>
    <string name="btn_lvl2_fillInTheBlanks_text">Fill In The Blanks</string>

    <string name="btn_lvl3_placeValue_text">Place Value (currency)</string>
    <string name="btn_lvl3_ordering_text">Ordering</string>
    <string name="btn_lvl3_valuesInCash_text">Values In Cash</string>
    <string name="btn_lvl3_exactChange_text">Exact Change</string>

    <string name="lvl1_msg">This is Level 1! Pick a game!</string>
    <string name="lvl2_msg">This is Level 2! Pick a game!</string>
    <string name="lvl3_msg">This is Level 3! Pick a game!</string>

    <string name="lvl1_gametracing_msg">This is Tracing!</string>
    <string name="lvl1_gametracing_nextBtn">Next</string>

    <string name="lvl1_gamedualCoding_msg">This is Dual Coding!</string>
    <string name="lvl1_demoQA_msg">This is the Demo/Tutorial for QA!</string>
    <string name="lvl1_demodualCoding_msg">This is the Demo/Tutorial for Dual Coding!</string>

    <string name="lvl2_gameordering_msg">This is Ordering!</string>
    <string name="lvl2_gamefillInTheBlanks_msg">This is Fill In The Blanks!</string>

    <string name="lvl3_gameplaceValue_msg">This is Place Value!</string>
    <string name="lvl3_gameordering_msg">This is Ordering!</string>
    <string name="lvl3_gamevaluesInCash_msg">This is Values In Cash!</string>
    <string name="lvl3_gameexactChange_msg">This is Exact Change!</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_level1">Level1Activity</string>
    <string name="title_activity_level1_gameqa">Level1ActivityGameQA</string>
    <string name="title_activity_level2_gamepv">Level2ActivityGamePV</string>
    <string name="tens">10</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_level2">Level2Activity</string>

    <!--
        The following are locale and county specific information. To add a new locale, create
        the appropriate directory, add a strings.xml file, and translate these
        strings (and only these strings) for the appropriate locale

        Similarly, to add a new country change the following information to be appropriate

        Note that locale and country are, for the moment, essentially identical

        TODO: locale is settable on the user device, country can come from the SIM card. I do not know
        TODO: how to test the sim card and it may be unnecessary anyway
        -->
    <!-- Error messages. These should NOT be user visible and so do not need to be localized -->
    <string name="negative_error_message">"Number must be positive"</string>
    <string name="cannot_canonicalize">Number can NOT be represented in bills given</string>
    <string name="cannot_make_directory">Could not create directory</string>

    <!-- Country specific format for currency -->
    <string name="Money_format">%.0f /-Ksh</string>

    <!-- Country specific values of the currencies
         Will be converted to a floating point value

         The value should be in the currency. So,
         a 0.5 rupee note would be 0.5,  a 2 rupee bill would be 2

         Note that there currently MUST be 5 entries and
         they MUST be in ascending order
         TODO - Change both of above assumptions

         They also MUST match the bills cur_1, cur_2 .., cur_9 or the user will be VERY confused :-)
         -->
    <string-array name="Value_Each_Currency">
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

    <!--
        Cannot create an array of arrays so create a single dimensional array with elements separated by commas
        The first element is the name (basically just a comment at this point, it is used in any errors reported)
        the second element is the price of the purchased_item as a floating point number. This is used in BOTH currency games
        The third element is the amount given in the Change currency game

        Note that BOTH the first and second element MUST be able to be EXACTLY expressed in the currency units.
        So, for example, if the lowest bill is 100 then ALL amounts must be in multiples of 100.

        Also, the second number MUST be strictly greater than the first
        TODO : Do we want to allow the second to be identical to the first? Ie, allow a person to expect
               to receive NO change

        -->

    <string-array name="Currency_tests">
        <item>basket_corn,250f,550f</item>
        <item>bananas,50f,100f</item>
        <item>basket_fish,550f,700f</item>
        <item>basketoranges,350f,500f</item>
    </string-array>

    <!--
      This demo contains an purchased_item that can be bought with exactly two units of currency
      Set the price here but make very sure that the first amount represents exactly TWO
      different bills

      The second number is used in the change game. Note that the change must ALSO be representable by
      two different bills.
      -->

    <string name="Currency_demo">
        basket_corn,250f,550f
    </string>

    <string name="the_item_that_is_being_purchased">The item that is being purchased</string>
    <string name="this_is_the_box_that_bills_get_dropped_in_as_user_purchsase_things">This is the box that bills get dropped in as user purchsase things</string>
    <string name="element_visible_only_in_exact_change_game_containing_currency_paid_total_and_images">Element visible only in exact change game containing currency paid (total and images)</string>
    <string name="contains_the_image_of_the_bill">contains the image of the bill</string>
    <string name="contains_the_text_giving_the_number_of_bills">contains the text giving the number of bills</string>
    <string name="element_visible_only_in_exact_change_game_containing_currency_tendered_total_and_images">element_visible_only_in_exact_change_game_containing_currency_tendered_total_and_images</string>
    <string name="status_and_control_items_at_top_of_screen">Status and control items at top of screen</string>
    <string name="the_total_amount_input_in_the_exact_change_game">the_total_amount_input_in_the_exact_change_game</string>
    <string name="the_total_amount_tendered_in_the_exact_change_game">the_total_amount_tendered_in_the_exact_change_game</string>

</resources>
