<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2016, 2019 MyOralVillage
 All Rights Reserved
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamechoicebackground"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Level1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="60dip"
            android:layout_gravity="bottom">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="50dip"
                android:layout_height="50dip"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dip"
                android:background="@drawable/home"
                android:onClick="setHomeButton" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="20dip"
            android:layout_height="120dip"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_lvl1_QA"
                android:layout_width="180dip"
                android:layout_height="220dip"
                android:layout_marginLeft="20dip"
                android:background="@drawable/level1_sign1"
                android:onClick="goToLevel1QA"
                android:text="@string/btn_lvl1_QA_text" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.3"></LinearLayout>

            <ImageButton
                android:id="@+id/btn_lvl1_tracing"
                android:layout_width="180dip"
                android:layout_height="220dip"
                android:background="@drawable/level1_sign2"
                android:onClick="goToLevel1Tracing"
                android:text="@string/btn_lvl1_tracing_text" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.3"></LinearLayout>

            <ImageButton
                android:id="@+id/btn_lvl1_dualCoding"
                android:layout_width="180dip"
                android:layout_height="220dip"
                android:layout_marginRight="20dip"
                android:background="@drawable/level1_sign3"
                android:onClick="goToLevel1DualCoding"
                android:text="@string/btn_lvl1_dualCoding_text" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
